--- a/client/.gitignore
+++ b/client/.gitignore
@@ -10,14 +10,19 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
-.env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.local
+.env.dev
+.env.prod
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+src/config.json
