--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.6.7",
     "mailgun.js": "^10.2.3",
-    "mongoose": "^8.4.0"
+    "mongoose": "^8.4.0",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
