--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mailgun-js": "^0.6.7",
     "mailgun.js": "^10.2.3",
     "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.14.2"
   },
   "devDependencies": {
