--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mailgun.js": "^10.2.3",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5",
     "winston": "^3.14.2"
   },
   "devDependencies": {
